; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_WKdmDecompress.c_WK_unpack_4bits.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/kxld/extr_WKdmDecompress.c_WK_unpack_4bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FOUR_BITS_PACKING_MASK = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"Unpacked dictionary indices word: %.8x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32*)* @WK_unpack_4bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @WK_unpack_4bits(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %11 = load i32*, i32** %4, align 8
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %6, align 8
  store i32* %12, i32** %8, align 8
  %13 = load i32, i32* @FOUR_BITS_PACKING_MASK, align 4
  store i32 %13, i32* %9, align 4
  br label %14

14:                                               ; preds = %18, %3
  %15 = load i32*, i32** %7, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = icmp ult i32* %15, %16
  br i1 %17, label %18, label %39

18:                                               ; preds = %14
  %19 = load i32*, i32** %7, align 8
  %20 = getelementptr inbounds i32, i32* %19, i64 0
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %10, align 4
  %22 = load i32, i32* %10, align 4
  %23 = call i32 @DEBUG_PRINT_2(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %22)
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* %9, align 4
  %26 = and i32 %24, %25
  %27 = load i32*, i32** %8, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 0
  store i32 %26, i32* %28, align 4
  %29 = load i32, i32* %10, align 4
  %30 = ashr i32 %29, 4
  %31 = load i32, i32* %9, align 4
  %32 = and i32 %30, %31
  %33 = load i32*, i32** %8, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 1
  store i32 %32, i32* %34, align 4
  %35 = load i32*, i32** %8, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 2
  store i32* %36, i32** %8, align 8
  %37 = load i32*, i32** %7, align 8
  %38 = getelementptr inbounds i32, i32* %37, i32 1
  store i32* %38, i32** %7, align 8
  br label %14

39:                                               ; preds = %14
  %40 = load i32*, i32** %8, align 8
  ret i32* %40
}

declare dso_local i32 @DEBUG_PRINT_2(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
